# python-project-template

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docs/source/: conf.py  index.rst
