[tool.poetry]
name = "project-name"
version = "0.0.0"
description = "Description du projet"
authors = [
          "Prénom NOM <adresse@mail.com>"
          ]
maintainers = [
              "John Smith <john@example.com>"
              ]

readme = "README.md"
repository = "https://github.com/olmatz/python-project-template"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
coverage = "^7.5.4"
isort = "^5.13.2"
autopep8 = "^2.3.1"
flake8 = "^7.0.0"
black = "^24.4.2"
pre-commit = "^3.7.1"
bandit = "^1.7.9"
sphinx = "^7.3.7"
sphinx_rtd_theme = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
ignore_errors = true

[tool.coverage.html]
directory = "coverage_report"

[tool.black]
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]
extend-exclude =               [
                ".git",
                "__pycache__",
                "*.pyc",
                "docs/source/conf.py",
                "old",
                "build",
                "dist"
                ]
max-complexity = 10

[tool.bandit]
exclude_dirs = ['docs']
[tool.bandit.assert_used]
skips = ['*_test.py', '*/test_*.py']